--- a/src/posts/10-post-number-ten/post.mdx
+++ b/src/posts/10-post-number-ten/post.mdx
@@ -69,7 +69,7 @@ const LikeButton = () => {
 
 <LikeButton />
 
-{' '}
+![nice image](./images/gatsby-1.png)
 
 <Link to="/" className="btn center-btn">
   Back To Home
